--- a/media/media(680).css
+++ b/media/media(680).css
@@ -5,3 +5,8 @@
 	width: 1.3%;
 	margin-left: 93.9%;/* спорный момент */
 }
+.home{
+	position: absolute;
+	margin-left: 19.8%;
+	margin-top: 72px;
+}
