--- a/style.css
+++ b/style.css
@@ -1,20 +1,23 @@
 body{
 	margin: 0; padding: 0;
-	background-color: black;
-	text-transform: uppercase;
+	background-color: #0c0c0c;
+		/* font-size: 14px; */
+    line-height: 1.6;
+    font-family: "Montserrat";
+    color: #fff;
 }
 header{
 	background-color: rgba(0, 0, 0, 0);
 	width: 100%;
 	height: 40px;
 	position: fixed;
+	text-transform: uppercase;
 }
 .logo{
 	color: white;
 	font-weight: bold;
-	font-size: 18px;
 	margin-left: 5%;
-	margin-top: 20px;
+	margin-top: 10px;
 }
 .logoimg{
 	/* position: absolute; */
@@ -22,6 +25,7 @@ header{
 }
 .logotext{
 	margin-left: 3%;
+	font-size: 18px;
 }
 .menu{
 	margin-top: -22px;
@@ -40,4 +44,103 @@ header{
 body header div.logo a{
 	color: white;
 	text-decoration: none;/* спорный момент */
+}
+.home{
+	position: absolute;
+	margin-left: 19.8%;
+	margin-top: 52px;
+}
+/* .hometext{
+	margin-top: 63px;
+} */
+body .home .hometext h1{
+	width: 30.8%;
+	font-weight: bolder;
+	font-size: 68px;
+	line-height: 1;
+	margin-top: 63px;
+}
+.visual{
+	margin-left: 30%;
+	margin-top: -270px;
+}
+.cta{
+	padding: 5px 17px 5px 5px;
+	font-weight: 700;
+	text-transform: uppercase;
+	background-color: transparent;
+	border: none;
+	color: #fff;
+	margin-left: 2%;
+	z-index: 1;
+	/* margin-top: 10px; - почему не работает?*/ 
+}
+.btn-background{
+	position: absolute;
+  top: 352px;
+  left: 20px;
+  right: 0;
+	height: 6%;
+	width: 10%;
+  background-color: #0f33ff;
+  z-index: -1;
+  -webkit-transition: left .2s ease-in-out;
+  transition: left .2s ease-in-out;
+}
+body .home button svg {
+	position: relative;
+	left: 5px;
+	width: 15px;
+	fill: #fff;
+}
+.first_hr{
+	/* content: ""; */
+	position: absolute;
+	top: 450px;
+	left: -132px;
+	right: 0;
+	height: 2px;
+	width: 87.8%;
+	background-color: #282828;
+	z-index: 2;
+}
+.second_hr{
+	content: "";
+	position: absolute;
+	top: 450px;
+	left: 2%;
+	width: 30px;
+	height: 4px;
+	background-color: #0f33ff;
+	z-index: 3;
+}
+.intro--options{
+	display: flex;
+	word-wrap: normal;
+}
+.intro--options>a {
+	margin-top: 3%;
+	font-size: 14px;
+	/* font-weight: bold !important; */
+	max-width: 250px;
+	text-decoration: none;
+	color: #282828;
+	-webkit-transition: color .2s ease-in-out;
+	transition: color .2s ease-in-out;
+}
+.elite{
+	margin-left: 9.5%;
+}
+.intro--options h3 {
+	font-size: 16px;
+	text-transform: uppercase;
+}
+.sclass{
+	margin-left: 2%;
+}
+.sclass:hover{
+	color: #fff;
+}
+.elite:hover{
+	color: #fff;
 }
