--- a/media/media(1280).css
+++ b/media/media(1280).css
@@ -3,10 +3,30 @@
 }
 .line{
 	width: 1.3%;
-	margin-left: 93.2%;/* спорный момент */
+	margin-left: 73.2%;/* спорный момент */
+}
+.menuline{
+	margin-left: 73%;
+}
+.visual{
+	margin-left: 28%;
+}
+.first_hr{
+	position: absolute;
+	top: 450px;
+	left: -155px;
+	right: 0;
+	height: 2px;
+	width: 86%;
+	background-color: #282828;
+	z-index: 2;
+}
+.elite{
+	margin-left: 8.5%;
 }
 .home{
-	position: absolute;
-	margin-left: 19.8%;
-	margin-top: 72px;
+	margin-left: 3%;
+}
+.logo{
+	margin-left: 3%;
 }
