--- a/media/media(780).css
+++ b/media/media(780).css
@@ -3,10 +3,36 @@
 }
 .line{
 	width: 1.3%;
-	margin-left: 93.7%;/* спорный момент */
+	margin-left: 73.6%;/* спорный момент */
+}
+.menuline{
+	margin-left: 73%;
 }
 .home{
 	position: absolute;
 	margin-left: 19.8%;
 	margin-top: 72px;
+}
+.visual{
+	visibility: hidden;
+}
+.first_hr{
+	visibility: hidden;
+}
+.second_hr{
+	visibility: hidden;
+}
+.intro--options{
+	visibility: hidden;
+}
+.hometext{
+	display: flex;
+	word-wrap: none;
+}
+.cta{
+	margin-top: 80px;
+}
+.btn-background{
+	width: 18%;
+	left: 10px;
 }
